add local font Nunito

--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/font/font.scss",
               "src/styles.scss"
             ],
             "scripts": []
